[package]
name = "domsl"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"
publish = false


[dependencies]
domsl-macro = { path = "domsl-macro" }
wasm-bindgen = "0.2.50"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Node',
  'Text',
]

[dev-dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCollection',
  'HtmlElement',
  'HtmlDivElement',
  'HtmlParagraphElement',
  'HtmlSpanElement',
  'HtmlTextAreaElement',
  'Node',
  'Window',
  'Text',
  'DocumentFragment',
]
